[Controller] Add user profile image update API implementation
* add implementation for uploading/updating user profile images
