# swagger.yml
@@ -180,6 +180,39 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+      - user
+      description: Update the user's profile image
+      operationId: updateUserImage
+      security:
+        - UserIDAuth: []
+      parameters:
+        - name: userId
+          in: path
+          description: The internal ID of the user
+          required: true
+          type: string
+        - name: profileImage
+          in: formData
+          description: Success
+          required: true
+          type: file
+      consumes:
+        - multipart/form-data
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        400:
+          description: Invalid userId
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /users:
     post:
       tags:
@@ -381,6 +414,15 @@ definitions:
         readOnly: true
         example: 1
   ErrorResponse:
+    required:
+      - status
+      - message
+    properties:
+      status:
+        type: integer
+      message:
+        type: string
+  SuccessResponse:
     required:
       - status
       - message
